Schema fixes and relaxed requires. CWL examples

--- a/_sources/example-prov-profile/examples.yaml
+++ b/_sources/example-prov-profile/examples.yaml
@@ -5,3 +5,20 @@
   snippets:
     - language: json
       ref: example.json
+
+- title: Profile example
+  content: |-
+    JSON
+
+  snippets:
+    - language: json
+      ref: example2.json
+
+- title: Profile example
+  content: |-
+    JSON
+
+  snippets:
+    - language: json
+      ref: example3.json
+
