Backport PROV-O stuff to bblock-prov-schema

--- a/bblocks-config.yaml
+++ b/bblocks-config.yaml
@@ -1,4 +1,4 @@
-identifier-prefix: ogc.prov.template.
+identifier-prefix: cwlprov.
 imports:
   - default
   - https://ogcincubator.github.io/bblock-prov-schema/build/register.json
