--- a/bblocks-config.yaml
+++ b/bblocks-config.yaml
@@ -1,4 +1,13 @@
-identifier-prefix: cwlprov.
+identifier-prefix: ogc.profiles.prov.cwl
+
+name: Common Workflow Language Profile of PROV
+abstract: This is a test of the generic PROV building block using the CWL profile of PROV
+description: |
+  [CWL (Common Workflow Language)](https://github.com/common-workflow-language/cwl-v1.2) is a scientific workflow description approach.
+  [CWLPROV](https://github.com/common-workflow-language/cwlprov) is a profile of the W3C PROV to describe workflows using a standard encoding.
+  
+  This bblock is an initial test that the PROV schema can be extended to support such a profile.
+
 imports:
   - default
   - https://ogcincubator.github.io/bblock-prov-schema/build/register.json
